Bug 275693 - krita crashes when selecting phong bumpmap filter
Summary: krita crashes when selecting phong bumpmap filter
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: pentalis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-15 08:57 UTC by Halla Rempt
Modified: 2011-07-08 19:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2011-06-15 08:57:16 UTC
I created an image from a template and selected phong bumpmap. Krita asserted with the following output, but no stacktrace.

QGridLayout: Multi-cell fromRow greater than toRow
"Azimuth0" : QVariant(int, 0) 
"Azimuth1" : QVariant(int, 0) 
"Azimuth2" : QVariant(int, 0) 
"Azimuth3" : QVariant(int, 0) 
"Inclination0" : QVariant(int, 0) 
"Inclination1" : QVariant(int, 0) 
"Inclination2" : QVariant(int, 0) 
"Inclination3" : QVariant(int, 0) 
"ambientReflectivity" : QVariant(double, 0) 
"diffuseReflectivity" : QVariant(double, 0) 
"diffuseReflectivityIsEnabled" : QVariant(bool, false) 
"heightChannel" : QVariant(QString, "Blue") 
"illuminantColor0" : QVariant(QColor, QColor(ARGB 1, 1, 1, 0) )                                                                                                                                                    
"illuminantColor1" : QVariant(QColor, QColor(ARGB 1, 1, 0, 0) )                                                                                                                                                    
"illuminantColor2" : QVariant(QColor, QColor(ARGB 1, 0, 1, 0) )                                                                                                                                                    
"illuminantColor3" : QVariant(QColor, QColor(ARGB 1, 1, 1, 0) )                                                                                                                                                    
"illuminantIsEnabled0" : QVariant(bool, false)                                                                                                                                                                     
"illuminantIsEnabled1" : QVariant(bool, false)                                                                                                                                                                     
"illuminantIsEnabled2" : QVariant(bool, false)                                                                                                                                                                     
"illuminantIsEnabled3" : QVariant(bool, false)                                                                                                                                                                     
"shinynessExponent" : QVariant(int, 1)                                                                                                                                                                             
"specularReflectivity" : QVariant(double, 0)                                                                                                                                                                       
"specularReflectivityIsEnabled" : QVariant(bool, false)                                                                                                                                                            
Tiempo de preparacion: 0 ms                                                                                                                                                                                        
Canary1                                                                                                                                                                                                            
FIX YOUR FILTER                                                                                                                                                                                                    
ASSERT failure in QVector<T>::operator[]: "index out of range", file /usr/include/QtCore/qvector.h, line 347                                                                                                       
Aborted   

I only had one layer.
Comment 1 pentalis 2011-06-15 17:58:12 UTC
Assigning to myself, I must fix this shameful event!.
Comment 2 pentalis 2011-07-08 19:35:57 UTC
Git commit a9784a79bc59bc5612336a22441ea321224c9992 by José Luis Vergara.
Committed on 08/07/2011 at 21:34.
Pushed by jlvergara into branch 'master'.

Remove hardcoded area assumption in Phong Bumpmap

BUG:275693

M  +9    -9    krita/plugins/filters/phongbumpmap/kis_phong_bumpmap_filter.cpp     
M  +3    -3    krita/plugins/filters/phongbumpmap/phong_pixel_processor.cpp     
M  +4    -1    krita/plugins/filters/phongbumpmap/phong_pixel_processor.h     

http://commits.kde.org/calligra/a9784a79bc59bc5612336a22441ea321224c9992