Remove hardcoded area assumption in Phong Bumpmap

BUG:275693